[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://images/title.png" type="Texture" id=2]
[ext_resource path="res://addons/Girasol - Quincas Moreira.mp3" type="AudioStream" id=3]
[ext_resource path="res://objects/levels/settings_menu.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1176.5, 640.003 )
scale = Vector2( 1.31984, 1.41067 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 812.0
margin_top = 371.0
margin_right = 868.0
margin_bottom = 439.0
rect_scale = Vector2( 5, 5 )
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 56.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../ExitButton")
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 56.0
margin_bottom = 44.0
text = "Option"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 56.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = " Exit "

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 574.0
margin_top = 69.0
margin_right = 734.0
margin_bottom = 108.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "My Sweet Island"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]
margin_left = 146.0
margin_top = 115.0
margin_right = 1017.0
margin_bottom = 692.0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
